# N-body-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  b  build.sh  imgui.ini  run.sh  tmp.txt
QOL_scripts/: build.bat  build.sh  build_debug.bat  q  run.bat  run.sh  run_debug.bat  run_release.bat
deprecated/: example_savefile.md
deprecated/PostProcessingSystem/Effects/: PostProcessingEffect.h
deprecated/PostProcessingSystem/PPTextureManager/: PPTextureManager.h
deprecated/PostProcessingSystem/PostProcessor/: PostProcessor.h
deprecated_stuffs/SampleComputeShader/: SampleComputeShader.cpp  sample.comp.glsl
deprecated_stuffs/SamplePolygon/: SamplePolygon.cpp  SamplePolygon.h
external_dependencies/glad/include/GLAD/: glad.h
external_dependencies/glad/src/: glad.c
include/: GLCommon.h  StringCommon.h
release/20250412/shader_source/: light.fs  light.vs  update_position_velocity_verlet_optimize_tile.comp
release/20250412/shader_source/bloom/: bloom_combine.fs  gaussian_blur.fs
release/archive/: CMakeLists.txt
shader_source/: light.frag.glsl  light.fs  light.vert.glsl  light.vs  sample.comp.glsl  update_position_euler.comp.glsl  update_position_velocity_verlet_optimize.comp  update_position_velocity_verlet_optimize_fine.comp  update_position_velocity_verlet_optimize_tile.comp  update_position_velocity_verlet_optimize_v2.comp
shader_source/bloom/: bloom_combine.fs  bloom_combine.vs  draw_final_texture.fs  gaussian_blur.fs  gaussian_blur.vs
src/: main.cpp
src/Bloom/: Bloom.cpp  Bloom.h
src/CallbackManager/: CallbackManager.cpp  CallbackManager.h  CameraEnum.h
src/Camera/: Camera.cpp  Camera.h
src/CameraController/: CameraController.cpp  CameraController.h
src/DefaultTestLoader/: DefaultTestLoader.cpp  DefaultTestLoader.h
src/DisplaySystem/Camera/: Camera.cpp  Camera.h
src/DisplaySystem/DisplayManager/: DisplayManager.cpp  DisplayManager.h
src/DisplaySystem/WindowFactory/: WindowFactory.cpp  WindowFactory.h
src/GUI/: GUI.cpp  GUI.h
src/Init/: Init.cpp  Init.h
src/InputParser/: InputParser.cpp  InputParser.h
src/InputProcessor/: InputProcessor.cpp  InputProcessor.h
src/Mesh/: Mesh.h  MeshBuilder.cpp  MeshBuilder.h  RenderComponents.h
src/ParticleSystem/Particle/: Particle.cpp  Particle.h
src/ParticleSystem/ParticleBuilder/: ParticleBuilder.cpp  ParticleBuilder.h
src/ParticleSystem/ParticleParticleCPU/: ParticleParticleCPU.cpp  ParticleParticleCPU.h
src/ParticleSystem/ParticleParticleGPU/: ParticleParticleGPU.cpp  ParticleParticleGPU.h
src/ParticleSystem/Simulator/: Simulator.cpp  Simulator.h  SimulatorEnum.h
src/Polygon/SamplePolygon/: SamplePolygon.cpp
src/PostProcessingSystem/Effects/Bloom/: Bloom.h
src/PostProcessingSystem/Effects/GaussianBlur/: GaussianBlur.h
src/PostProcessingSystem/PostProcessor/: PostProcessor.cpp  PostProcessor.h
src/ProgramInit/: ProgramInit.cpp  ProgramInit.h
src/Renderer/: renderer.cpp  renderer.h
src/SetupSystem/: SetupPayload.h
src/SetupSystem/DefaultTestLoader/: DefaultTestLoader.cpp  DefaultTestLoader.h
src/SetupSystem/InputParser/: InputParser.cpp  InputParser.h  SetupPayload.h
src/SetupSystem/ParticleBuilder/: ParticleBuilder.cpp  ParticleBuilder.h
src/SetupSystem/SetupGUI/: SetupGUI.cpp  SetupGUI.h
src/SetupSystem/SimulationLoader/: SimulationLoader.cpp  SimulationLoader.h
src/Shader/: Shader.cpp  Shader.h
src/display/: display.cpp  display.h
